# yay-tui

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh  test.py
demo_ui/: CMakeLists.txt  end_2_end_playlist.cpp  mpv_player.cpp  music_selector.cpp  playlist.cpp  playlist_selector.cpp  text_player_widget.cpp
include/: mpv_controller.hpp  music_structs.hpp
include/py_wraps/: python_wrappers.hpp
include/python_wrappers/: python_wrappers.hpp
include/widgets/: player_widget.hpp  playlist_selector_widget.hpp  playlist_widget.hpp  song_list.hpp  song_widget.hpp  widgets.hpp
src/: main.cpp  mpv_controller.cpp
src/py_wraps/: python_wrappers.cpp  wrappers.py
src/py_wraps/c_files/: CMakeLists.txt  python_wrappers.cpp  test.cpp.bk
src/py_wraps/config/: channel_id  oauth.json
src/py_wraps/py_env/: pyvenv.cfg
src/py_wraps/py_files/: pyapi  wrappers.py
src/python_wrappers/: python_wrappers.cpp
src/python_wrappers/pyfiles/: wrappers.py
src/widgets/: player_widget.cpp  playlist_selector_widget.cpp  playlist_widget.cpp  song_list.cpp  song_widget.cpp
